--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <div id="app" />
-    <script src="public/bundle.js" type="text/javascript"></script>
+    <script src="/public/bundle.js" type="text/javascript"></script>
 </body>
 
 </html>
