--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -15,6 +15,15 @@
             background: #eee;
             font-family: Arial, Helvetica, Sans-Serif;
         }
+
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+            font-weight: normal
+        }
     </style>
 </head>
 
